--- a/5.Demo-Projects/login.html
+++ b/5.Demo-Projects/login.html
@@ -14,7 +14,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/blog.css" />
+    <link rel="stylesheet" href="css/login.css" />
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body id="page_blog">
@@ -64,7 +64,15 @@
               </li>
           </ul>
           <section class="main_wrapper flex">
-            main_wrapper
+                <div class="login_wrapper">
+                    <form action="">
+                        <h2>Login</h2>
+                        <input placeholder="Your Email" type="email" name="email" id="email">
+                        <input placeholder="Password" type="password" name="password" id="password">
+                        <button type="submit">Login</button>
+                    </form>
+                    <p class="note">You don't have an account <a href="register.html">Register now</a></p>
+                </div>
           </section>
         </div>
     </main>
