--- a/Batch-30/yarn-app/public/index.html
+++ b/Batch-30/yarn-app/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="" id="root" style="background-color: azure;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +39,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
+  <script>
+
+    let html = `Hello ${name}`;
+    let html2 = 'Hello '+name;
+  </script>
 </html>
