--- a/Batch-30/yarn-app/public/index.html
+++ b/Batch-30/yarn-app/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="" id="root" style="background-color: azure;"></div>
+    <div  id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -41,9 +41,5 @@
     -->
     
   </body>
-  <script>
-
-    let html = `Hello ${name}`;
-    let html2 = 'Hello '+name;
-  </script>
+  
 </html>
