--- a/Batch-33/event.html
+++ b/Batch-33/event.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello h1</h1>
     <!-- Trong Html -->
 <div onclick="suKienA()">
     <p onclick="suKienB()">P</p>
