--- a/Batch-34/react-vite-ts/test.html
+++ b/Batch-34/react-vite-ts/test.html
@@ -9,6 +9,13 @@
     <img style="background-color: red;" src="" alt="" >
     <input type="text">
     <script>
+        let styles = {
+            button: 'button',
+            button_dark: 'button_dark'
+        }
+
+        console.log(styles.button, styles['button_dark']);
+
 
         function helloName(name='Aptech'){
             console.log('Hello ',name);
