--- a/5.Demo-Projects/blog.html
+++ b/5.Demo-Projects/blog.html
@@ -39,6 +39,7 @@
               <li><a href="category.html">Category</a></li>
               <li><a href="product.html">Product</a></li>
               <li><a href="login.html">Login</a></li>
+              <li><a href="customer.html">Customer</a></li>
               
             </ul>
             <div class="header-cart">
