--- a/5.Demo-Projects/product.html
+++ b/5.Demo-Projects/product.html
@@ -45,6 +45,7 @@
               <li><a href="category.html">Category</a></li>
               <li class="actived"><a href="#">Product</a></li>
               <li><a href="login.html">Login</a></li>
+              <li><a href="customer.html">Customer</a></li>
             </ul>
             <div class="header-cart">
               <i class="fa fa-shopping-cart"></i>
