--- a/5.Demo-Projects/index.html
+++ b/5.Demo-Projects/index.html
@@ -40,7 +40,7 @@
               <li><a href="category.html">Category</a></li>
               <li><a href="product.html">Product</a></li>
               <li><a href="login.html">Login</a></li>
-              
+              <li><a href="customer.html">Customer</a></li>
             </ul>
             <div class="header-cart">
               <i class="fa fa-shopping-cart"></i>
