--- a/Batch-38/react-vite/index.html
+++ b/Batch-38/react-vite/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <style>
+      /* dkfjkdjfdkfj */
+    </style>
   </head>
   <body>
+    <!-- lkdgfgjkfgjfk -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      const user = {
+        name: "Nhan",
+        age: 35,
+        work: "Aptech",
+      };
+    </script>
   </body>
 </html>
