--- a/Batch-38/react-vite/index.html
+++ b/Batch-38/react-vite/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <style>
-      /* dkfjkdjfdkfj */
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- lkdgfgjkfgjfk -->
