--- a/Batch-39/html-js/index.html
+++ b/Batch-39/html-js/index.html
@@ -7,13 +7,17 @@
   </head>
 
   <body>
-    <button onclick="handleClick()">Click</button>
+    <input name="age" value="0" type="text" />
+    <button class="btn text-orange-500" onclick="handleClick()">Click</button>
     <script>
       let index = 0;
+
+      document.querySelector("button").classList("text-orange-500");
 
       function handleClick() {
         index = index + 1;
         console.log(index);
+        document.querySelector("input[name='age']").value = 10;
       }
     </script>
   </body>
