--- a/Batch-186-188/demo-html/index.html
+++ b/Batch-186-188/demo-html/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <div class="product"></div>
+    <script>
+      const n = "Nhan";
+      const h1 = `hello ${n}`;
+      console.log(h1);
+    </script>
   </body>
 </html>
