--- a/Batch-186-188/demo-html/categgory.html
+++ b/Batch-186-188/demo-html/categgory.html
@@ -8,5 +8,23 @@
   </head>
   <body>
     <div class="product"></div>
+    <script>
+      type TProps = {
+        label: string,
+        bgColor: string,
+      };
+      const { label, bgColor }: TProps = {
+        label: "a",
+        bgColor: "f1",
+      };
+
+      const { label, bgColor } = props;
+      console.log(label);
+
+      function sum(a, b = 2) {
+        return a + b;
+      }
+      sum(2);
+    </script>
   </body>
 </html>
