--- a/Batch-186-188/demo-html/product.html
+++ b/Batch-186-188/demo-html/product.html
@@ -31,4 +31,17 @@
       </button>
     </div>
   </body>
+
+  <script>
+    function blockUi() {
+      const isShow = false;
+
+      /* hàm return về block ui khi chỉ kho isShow = true */
+      // nguoc lai thi return null
+      if (isShow == true) return "blockui";
+      else {
+        return null;
+      }
+    }
+  </script>
 </html>
