--- a/Batch-186-188/demo-html/index.html
+++ b/Batch-186-188/demo-html/index.html
@@ -20,6 +20,13 @@
       const n = "Nhan";
       const h1 = `hello ${n}`;
       console.log(h1);
+
+      const users = {
+        id: 1,
+        name: "Nam",
+      };
+
+      const jsonStr = '{"id":1,"name":"Nam"}';
     </script>
   </body>
 </html>
