--- a/Batch-186-188/demo-html/index.html
+++ b/Batch-186-188/demo-html/index.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="product.css" />
-  </head>
-  <body>
-    <button onclick="addToCart()">Add to cart</button>
-    <div onmouseenter="onMouse()" class="product"></div>
-    <script>
-      function onMouse() {
-        console.log("bạn để rê chuột lên ô màu vàng");
-      }
-      function addToCart() {
-        console.log("Thêm vào giỏ hàng thành công !");
-      }
 
-      const n = "Nhan";
-      const h1 = `hello ${n}`;
-      console.log(h1);
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="product.css" />
+</head>
 
-      const users = {
-        id: 1,
-        name: "Nam",
-      };
+<body>
+  <img src="" alt="" >
+  <button style="font-size: 16;background-color: 'blue';" onclick="addToCart()">Add to cart</button>
+  <div onmouseenter="onMouse()" class="product"></div>
 
-      const jsonStr = '{"id":1,"name":"Nam"}';
-    </script>
-  </body>
+
+  <script>
+    const name = 'Nhan';
+    const html = `<p>Hello  ${name} </p>`;
+
+    console.log(html);
+
+
+    function onMouse() {
+      console.log("bạn để rê chuột lên ô màu vàng");
+    }
+    function addToCart() {
+      console.log("Thêm vào giỏ hàng thành công !");
+    }
+
+    const n = "Nhan";
+    const h1 = `hello ${n}`;
+    console.log(h1);
+
+    const users = {
+      id: 1,
+      name: "Nam",
+    };
+
+    const jsonStr = '{"id":1,"name":"Nam"}';
+  </script>
+</body>
+
 </html>
