--- a/Batch-40/test.html
+++ b/Batch-40/test.html
@@ -5,19 +5,113 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 
-<body>
-    <div style="background-color: #fff;font-size: 14px" class="class-name" id="root">
+<body class="bg-secondary-subtle">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <h1>Hello Heading 1</h1>
+    <div class="container">
+        <div class="row gx-5">
+            <div class="col col-8">8</div>
+            <div class="col col-4">4</div>
+        </div>
     </div>
-    <img src="" alt="">
-    <!-- đây là comment -->
-    <script>
-        const name = 'Nhan';
-        //javascript template string
-        const myElementWithJSX = `<h1 className="greeting">Hello, world! JSX ${name}</h1>`;
-        document.getElementById('root').innerHTML = myElementWithJSX;
-    </script>
+    <div class="container">
+        <div class="product-list  row row-cols-4 g-3">
+            <div class="item bg-white">
+                <div>
+                    <img height="150" width="150"
+                        src="https://cdnv2.tgdd.vn/mwg-static/tgdd/Products/Images/4728/329519/camera-ip-360-do-5mp-365-selection-c2-thumb-1-638665880164086375-600x600.jpg"
+                        alt="">
+                </div>
+                <h3 class="fs-5">Camera IP 360 Độ 5MP 365 Selection C2</h3>
+                <div class="price">
+                    <strong class="text-danger">159.000đ</strong>
+                </div>
+            </div>
+            <div class="item bg-white">
+                2
+            </div>
+            <div class="item bg-white">
+                3
+            </div>
+            <div class="item bg-white">
+                4
+            </div>
+        </div>
+    </div>
+
+
+
+    <button class="btn btn-primary">Login</button>
+    <table class="table table-striped">
+        <tr>
+            <td>1</td>
+            <td>1</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>1</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>1</td>
+            <td>1</td>
+        </tr>
+    </table>
+    <form action="">
+        <input class="form-control" type="text" placeholder="Enter your name">
+        <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
 </html>
