--- a/Batch-40/tw.html
+++ b/Batch-40/tw.html
@@ -8,12 +8,10 @@
 </head>
 
 <body>
-    <div class="container mx-auto">
-
-        <button
-            class="py-2 px-3 border border-indigo-500 bg-indigo-500 hover:bg-indigo-700 text-white rounded">Login</button>
-
-    </div>
+    <div id="root"></div>
 </body>
+<script>
+    document.getElementById('root').innerHTML = '<p>Hello JS</p>'
+</script>
 
 </html>
