--- a/Batch-193/react-vite-typescript/test.html
+++ b/Batch-193/react-vite-typescript/test.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
+    <button onclick="ButtonV2('Nhan')">Play</button>
     <script>
         function ButtonV2(props) {
             console.log('Hello', props);
         }
-        ButtonV2({ label: 'login' })
-        ButtonV2({ label: 'logout' })
+
     </script>
 </body>
 
