--- a/5.Demo-Projects/category.html
+++ b/5.Demo-Projects/category.html
@@ -144,7 +144,11 @@
                     </div>
                   </div>
                 </section>
-                  
+                  <div class="pagination">
+                      <a class="active" href="?page=1">1</a>
+                      <a href="?page=2">2</a>
+                      <a href="?page=3">3</a>
+                  </div>
               </div>
           </section>
         </div>
