--- a/Batch-195/react-ts-vite/index.html
+++ b/Batch-195/react-ts-vite/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>react-ts-vite</title>
+    <link href="/src/index.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
