--- a/5.Demo-Projects/ui.html
+++ b/5.Demo-Projects/ui.html
@@ -1,49 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Hello React</h1>
-    <hr />
-    <button>Default</button>
-    <hr />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <h1>Hello React</h1>
+  <hr />
+  <button>Default</button>
+  <hr />
+  <img src="https://i.imgur.com/MK3eW3Am.jpg" alt="Katherine Johnson" />
+  <hr />
+  <button>Default</button>
+  <button>Primary</button>
+  <button>Outline</button>
+  <hr />
+  <ul>
+    <li>Task 1</li>
+    <li>Task 2</li>
+    <li>Task 3</li>
+  </ul>
+  <hr />
+  <form action="">
+    <div>
+      <p>Email</p>
+      <input type="email" />
+    </div>
+    <div>
+      <p>Password</p>
+      <input type="password" />
+    </div>
+    <div>
+      <button>Login</button>
+    </div>
+  </form>
+  <hr />
+  <article>
     <img src="https://i.imgur.com/MK3eW3Am.jpg" alt="Katherine Johnson" />
-    <hr />
-    <button>Default</button>
-    <button>Primary</button>
-    <button>Outline</button>
-    <hr />
-    <ul>
-      <li>Task 1</li>
-      <li>Task 2</li>
-      <li>Task 3</li>
-    </ul>
-    <hr />
-    <form action="">
-      <div>
-        <p>Email</p>
-        <input type="email" />
-      </div>
-      <div>
-        <p>Password</p>
-        <input type="password" />
-      </div>
-      <div>
-        <button>Login</button>
-      </div>
-    </form>
-    <hr />
-    <article>
-      <img src="https://i.imgur.com/MK3eW3Am.jpg" alt="Katherine Johnson" />
-      <h3>Katherine Johnson</h3>
-      <p>
-        Creola Katherine Johnson was an American mathematician whose
-        calculations of orbital mechanics as a NASA employee were critical to
-        the success of the first and subsequent U.S. crewed spaceflights
-      </p>
-    </article>
-  </body>
+    <h3>Katherine Johnson</h3>
+    <p>
+      Creola Katherine Johnson was an American mathematician whose
+      calculations of orbital mechanics as a NASA employee were critical to
+      the success of the first and subsequent U.S. crewed spaceflights
+    </p>
+  </article>
+</body>
+
+<script>
+  function button(name, age) {
+    console.log(name, age);
+  }
+  button('Login', 15)
+  button('Logout', 12)
+
+</script>
+
 </html>
